@@ -1,5 +1,15 @@
 2006-05-24  Fernando Perez  <Fernando.Perez@colorado.edu>
 
+	* IPython/Shell.py (MatplotlibShellBase._matplotlib_config): Fix
+	nasty bug which was preventing custom namespaces with -pylab,
+	reported by M. Foord.  Minor cleanup, remove old matplotlib.matlab
+	compatibility (long gone from mpl).
+
+	* IPython/ipapi.py (make_session): name change: create->make.  We
+	use make in other places (ipmaker,...), it's shorter and easier to
+	type and say, etc.  I'm trying to clean things before 0.7.2 so
+	that I can keep things stable wrt to ipapi in the chainsaw branch.
+
 	* ipython.el: fix the py-pdbtrack-input-prompt variable so that
 	python-mode recognizes our debugger mode.  Add support for
 	autoindent inside (X)emacs.  After a patch sent in by Jin Liu
